[gd_scene load_steps=5 format=3 uid="uid://c3eh5oe37ijck"]

[ext_resource type="Script" uid="uid://e6j6mntovs1u" path="res://scripts/card_description.gd" id="1_ddsqd"]

[sub_resource type="LabelSettings" id="LabelSettings_ddsqd"]
font_size = 28

[sub_resource type="LabelSettings" id="LabelSettings_h4e65"]
font_size = 17

[sub_resource type="LabelSettings" id="LabelSettings_a1yaa"]
font_size = 20

[node name="CardDescription" type="Control"]
z_index = 3
custom_minimum_size = Vector2(340, 200)
layout_mode = 3
anchor_right = 0.176042
anchor_bottom = 0.193519
offset_right = 2.0
offset_bottom = -9.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ddsqd")
metadata/_edit_use_anchors_ = true

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.14, 0.14, 0.14, 0.92)

[node name="LabelTitle" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 23.0
grow_horizontal = 2
text = "Card Name"
label_settings = SubResource("LabelSettings_ddsqd")
horizontal_alignment = 1

[node name="LabelDescription" type="Label" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Card description description description description"
label_settings = SubResource("LabelSettings_h4e65")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="LabelFamily" type="Label" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -34.0
grow_horizontal = 2
grow_vertical = 0
text = "Scientists"
label_settings = SubResource("LabelSettings_a1yaa")
vertical_alignment = 2
autowrap_mode = 2

[node name="LabelRarity" type="Label" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -34.0
grow_horizontal = 2
grow_vertical = 0
text = "Rare"
label_settings = SubResource("LabelSettings_a1yaa")
horizontal_alignment = 2
vertical_alignment = 2
autowrap_mode = 2
